<resources>
    <string name="app_name">QuizGame</string>
    <string name="quiz_game">Quiz Game</string>
    <string name="start_game">Start Game</string>
    <string name="categories">Categories</string>
    <string name="options">Options</string>
    <string name="language">Language</string>
    <string name="max_span">(Max:3)</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="lifes">Lifes</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="loading">Loading&#8230;</string>
    <string name="aboutMe">About</string>
    <string name="messageAboutDialog">Project Designed for the Library of Tei Crete\nDepartment of Informatics Engineering\nFinal Thesis</string>
    <string name="languageTitle">Select Display Language</string>
    <string name="grlang">Greek</string>
    <string name="enlang">English</string>
    <string name="next">Next</string>
    <string name="ta_to_select">Tap to select display language</string>
    <string name="options_saved">Your options are saved</string>
    <string name="noquestionslayouttext">Questions for this category will be available soon</string>
    <string name="unavailable">Unavailable</string>
    <string name="wifi_off_title">No Internet Connection</string>
    <string name="wifi_off_message">Network connection error. Please check your internet connection settings.</string>
    <string name="wrongAnswer">Your Answer is wrong</string>
    <string name="correctAnswer">Your Answer is correct</string>
    <string name="noanswerselected">You have to make a selection</string>
    <string name="Contact">Contact</string>
    <string name="switch_text">Need more help?</string>
    <string name="help_hint_subject">Subject</string>
    <string name="help_hint_message">Message</string>
    <string name="help_dialog_message">Contact us any time at</string>
    <string name="help">Help</string>
    <string name="send">Send</string>
    <string name="subject_or_message_empty">Both fields are required</string>
    <string name="subject_empty">Subject cannot be empty</string>
    <string name="message_empty">Message cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="resultTitle">Result</string>
    <string name="poor">Poor</string>
    <string name="medium">Medium</string>
    <string name="excellent">Excellent</string>
    <string name="endofgame">End of Game</string>
    <string name="final_score">Final Score</string>
    <string name="screen1_title">Quiz Game</string>
    <string name="screen1_desc">This is a project designed for Library of Technological Educational Institute of Crete</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="screen2_desc">Through this quiz people will learn how to use the Library\'s utilities and services</string>
    <string name="heart">User Life</string>
    <string name="lifesuser">Lifes:</string>
    <string name="nomorelifes">You have not any more help available</string>
</resources>
