<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include android:id="@+id/toolBar" layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/library"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonStartGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/start_game"
                 />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:id="@+id/buttonCategories" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:id="@+id/buttonOptions" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
