<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <include android:id="@+id/toolBar" layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/languageLayout"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_language"
                android:id="@+id/imageViewLanguage" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="25sp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:id="@+id/textView2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_to_select"
                    android:textSize="19sp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_marginTop="-15dp"
                    android:id="@+id/displayLanguageText" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="25dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_action_heart"
            android:id="@+id/imageViewLife" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:text="@string/lifes"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/textView4" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:id="@+id/buttonMinus" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="-10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/max_lifes"
                    android:text="@string/max_span"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:layout_weight="1"
                android:editable="false"
                android:text="@string/zero"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="10dp"
                android:background="@drawable/edit_bg"
                android:textColor="@color/black"
                android:ems="3"
                android:id="@+id/lifeEdittext" />
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/plus"
                android:layout_weight="1"
                android:id="@+id/buttonPlus" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/aboutLayout"
        android:layout_width="match_parent"
        android:padding="25dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_action_info"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/textView" />

    </LinearLayout>


</LinearLayout>
