<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/helpRootLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView4" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:checked="false"
                    android:gravity="center_horizontal"
                    android:text="@string/switch_text"
                    android:id="@+id/helpSwitch" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:id="@+id/messageLayout"
                android:animateLayoutChanges="true"
                android:layout_height="match_parent"
                android:visibility="gone">

                    <EditText
                        android:id="@+id/subject"
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="20dp"
                        android:hint="@string/help_hint_subject"/>

                    <EditText
                        android:id="@+id/TextMessage"
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:layout_margin="20dp"
                        android:hint="@string/help_hint_message"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>